<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tingle_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tingleBG"
    android:orientation="vertical"
    android:padding="10dp">

    <!-- Last thing added -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/headline"/>

        <TextView
            android:id="@+id/last_thing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/magic"/>

    </LinearLayout>

    <!-- What new thing -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/what_thing"/>

        <EditText
            android:id="@+id/what_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/magic"/>

    </LinearLayout>

    <!-- Where is new thing -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/where"/>

        <EditText
            android:id="@+id/where_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/magic"/>

    </LinearLayout>

    <!-- Button to add new thing-->
    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/button"
        android:padding="10dp"
        android:text="@string/add_button"/>

    <Button
        android:id="@+id/thing_list_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@color/button"
        android:padding="10dp"
        android:text="@string/view_thing_button"/>

</LinearLayout>